# sushii-services

./: Cargo.toml  README.md  docker-compose.dev.yml  docker-compose.yml
example/: Cargo.toml
example/src/: main.rs
processor/: Cargo.toml
processor/src/: error.rs  events.rs  lib.rs
sharder/: Cargo.toml
sharder/src/: main.rs
src/: main.rs
sushii-model/: Cargo.toml
sushii-model/src/: event.rs  lib.rs
