[package]
name = "sushii-sharder"
version = "0.1.0"
authors = ["drklee3 <derrick@dlee.dev>"]
edition = "2018"

[dependencies]
twilight-gateway = "0.2.1"
darkredis = "0.7.0"
twilight-model = "0.2.1"
tracing = "0.1.21"
tracing-subscriber = "0.2.15"
tokio = {version = "0.2", features = ["macros", "rt-core", "stream"]}
num_cpus = "1.13.0"
serde_json = "1.0.59"
dotenv = "0.15.0"
