[package]
name = "sushii-processor"
version = "0.1.0"
authors = ["drklee3 <derrick@dlee.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darkredis = "0.7.0"
dotenv = "0.15.0"
num_cpus = "1.13"
serde_json = "1.0"
tokio = {version = "0.2", features = ["macros", "rt-core", "stream", "signal"]}
tracing = "0.1"
twilight-model = "0.2"
async-stream = "0.2"
serde = "1.0"
