[package]
name = "sushii-sharder"
version = "0.1.0"
authors = ["drklee3 <derrick@dlee.dev>"]
edition = "2018"

[dependencies]
twilight-gateway = "0.2"
darkredis = "0.7.0"
twilight-model = "0.2"
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = {version = "0.2", features = ["macros", "rt-core", "stream", "signal"]}
num_cpus = "1.13"
serde_json = "1.0"
dotenv = "0.15"
